style.css
body{
  font-family: Arial, Verdana, Helvetica, sans-serif;
  margin: 0;
}

h1 {
  text-align: center;
  margin-left: 20px;
  font-size: 1.9em;
}

h1.title{
  font-family: Roboto, sans-serif;
  font-weight: lighter;
}

p{
  text-overflow: ellipsis;
  font-family: Arial, Verdana, Helvetica, sans-serif;
  line-height: 1.8em;
}
p.uppercase {
  text-transform: uppercase;
}
p.lowercase {
  text-transform: lowercase;
}
p.capitalize {
  text-transform: capitalize;
}
p.crossedout {
  text-decoration: line-through;
}
p.underline{
  text-decoration: underline;
}
p.code{
  font-family: Courier, Monospace;
}
p.content{
  font-family: Roboto, sans-serif;
  font-weight: lighter;
}

a:link {
  text-decoration: none;
}
a:visited {
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
a:active {
  text-decoration: underline;
}

ul.circle {
  list-style-type: circle;
}
ul.square {
  list-style-type: square;
}
ol.upper_roman {
  list-style-type: upper-roman;
}
ol.lower_alphabet {
  list-style-type: lower-alpha;
}

.navbar{
  width: 100%;
  box-shadow: 0px 0px 9px 1px grey;
  height: 2.5em;
  position: fixed;
  top: 0;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-color: white;
  transition: top 0.3s ease-in-out;
}

.navbar > h2{
  font-family: Roboto, sans-serif;
  font-weight: normal;
  vertical-align: middle;
  float: left;
  box-sizing: border-box;
  display: block;
  height: inherit;
  margin-left: 0.2em;
  margin-top: 0.2em;
  margin-right: 0;
  margin-bottom: 0;
  overflow: hidden;
  color: rgb(228, 135, 76);
  font-size: 1.7em;
  text-align: center;
}

.navbar > img{
  max-height: 2.5em;
  display: inline;
  float: left;
  padding-left: 5%;
  padding-top: 0.25em;
  padding-bottom: 0.25em;
  overflow: hidden;
  box-sizing: border-box;
}

.navbar-up {
  top: -2.5em;
}

.banner{
  width: 100%;
  max-height: 400px;
  box-sizing: border-box;
  margin-top: 1em;
}

.content{
  margin: 4%;
}

